--- a/boris-elcin/src/menu/card.css
+++ b/boris-elcin/src/menu/card.css
@@ -1,57 +1,33 @@
-.area_of_card {
-	width: 25%;
-
+.card{
+	margin: 0 auto;
+	display: flex;
+	padding: 20px;
+	/* flex-direction: column; */
+	
 }
-
 .card img {
+	margin:  0 auto;
+	width: 200px;
+	height: 150px;
+	border-radius: 10%;
+	box-shadow: 10px 5px 5px rgb(204, 202, 202);;
+}
+.card div{
+	border-radius: 10%;
+	box-shadow: 10px 5px 5px rgb(204, 202, 202)
+}
+.card div p{
 	margin: 0 auto;
-	width: 100%;
-	border-radius: 20px;
 }
-
-.card {
-	margin: 0 auto;
-	width: 70%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 10px 5px 5px rgb(201, 201, 201);
-	border: 1px solid rgb(201, 201, 201);
-	border-radius: 20px;
-}
-.card:hover{
-	margin-top: 40px;
-}
-.text {
+.btn{
+	padding: 10px;
 	display: flex;
 	justify-content: center;
-	text-align: center;
-	align-items: center;
-	box-shadow: 3px 3px rgb(201, 201, 201), -1em 0 .4em rgb(201, 201, 201);
 }
-
-.price {
-	display: flex;
-	align-items: center;
-
-}
-
-
-.divBTN {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.divBTN button {
-	text-shadow: 1px 1px 2px rgb(201, 201, 201), 0 0 1em black, 0 0 0.2em black;
+.btn button{
+	color:white;
+	padding: 10px 15px 10px 15px;
 	background-color: #25B8E7;
 	border: none;
-	padding: 15px 30px;
-	border-radius: 10px;
-	color: white;
-}
-.divBTN button:hover{
-	background-color:white;
-	border:1px solid #25B8E7;
+	border-radius: 5px;
 }
