--- a/boris-elcin/src/menu/menu.css
+++ b/boris-elcin/src/menu/menu.css
@@ -1,10 +1,15 @@
 .square{
+	margin: 0 auto;
 	display: flex;
 	/* justify-content: center; */
 	align-items: center;
 	box-shadow: 10px 5px 5px rgb(201, 201, 201);
+	box-shadow:  10px 5px 5px rgb(109, 109, 109), 10px 5px 5px rgb(201, 201, 201);
 	flex-flow: wrap;
-	height: 130vh;
+	width: 82%;
+	height: 100%;
+	border-radius: 20px;
+	
 }
 
 .last_Adt{
